# platitude

./: .gitignore  README.md  pyproject.toml
notebooks/: platitude.ipynb
platitude/: __main__.py
platitude/cliche/: archive.py  archive_test.py  blockstore.py  blockstore_test.py  bm25.py  bm25_test.py  detector.py  index.py  index_test.py  megamatrix.py  megamatrix_test.py  table_test.py
platitude/speeches/: scrape.py
platitude/store/: archive.py  archive_test.py  blockstore_test.py  index_test.py  table.py
