[project]
name = "platitude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bm25s>=0.3.0",
    "numpy>=2.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
jupyter = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.5",
    "tabulate>=0.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
]
